# mecat

./: .gitignore  README.md  pyproject.toml
src/mecat/: DATE.py  __init__.py  evaluate.py
src/reference/caption/test/: 000.jsonl  00A.jsonl  0M0.jsonl  0MA.jsonl  S0A.jsonl  SMA.jsonl
src/reference/caption/train/: 000.jsonl  00A.jsonl  0M0.jsonl  0MA.jsonl  S0A.jsonl  SMA.jsonl
src/reference/qa/test/: 000.jsonl  00A.jsonl  0M0.jsonl  0MA.jsonl  S0A.jsonl  SMA.jsonl
src/reference/qa/train/: 000.jsonl  00A.jsonl  0M0.jsonl  0MA.jsonl  S0A.jsonl  SMA.jsonl
